# qalam

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  test.qlm
examples/: print_expression.rs
examples/all_features/: main.qlm  main.rs
examples/array/: main.qlm  main.rs
examples/classes/: main.qlm  main.rs
examples/closure/: main.qlm  main.rs
examples/compound_assignment/: main.qlm  main.rs
examples/conditionals/: main.qlm  main.rs
examples/create/: main.rs  template.rs
examples/for_loop/: main.qlm  main.rs
examples/functions/: main.qlm  main.rs
examples/global_funcs/: main.qlm  main.rs
examples/hello/: main.qlm  main.rs
examples/inheritance/: main.qlm  main.rs
examples/linked_list/: main.qlm  main.rs
examples/merge_sort/: main.qlm  main.rs
examples/recursive_functions/: main.qlm  main.rs
examples/scoped_variables/: main.qlm  main.rs
examples/static_scope/: main.qlm  main.rs
examples/variable_assignment/: main.qlm  main.rs
examples/variable_declaration/: main.qlm  main.rs
examples/while/: main.qlm  main.rs
src/: args.rs  environment.rs  error.rs  hashable.rs  interpreter.rs  lib.rs  literal.rs  main.rs  parser.rs  resolver.rs  scanner.rs  stack.rs  token.rs
src/ast/: expr.rs  expressions.rs  mod.rs  stmt.rs  utils.rs  visitor.rs
src/ast/visitor/: expr.rs  stmt.rs
src/callable/: class.rs  function.rs  global.rs  instance.rs  mod.rs
src/native/: array_constructor.rs  ceil.rs  clock.rs  code.rs  floor.rs  indexof.rs  len.rs  max.rs  min.rs  mod.rs  num.rs  pop.rs  pow.rs  push.rs  random.rs  random_int.rs  replace.rs  round.rs  slice.rs  str.rs  substr.rs  typeof_func.rs
