[package]
name = "qalam"
version = "0.2.3"
edition = "2021"
authors = ["Ammar Ahmed <ammar.ahmed2203@gmail.com>"]
license = "MIT"
repository = "https://github.com/ammar-ahmed22/qalam"
readme = "README.md"
description = "Interpreter for the Qalam programming language. Qalam is a dead-simple, Islamic/Arabic terminology inspired, interpreted programming langauge."
keywords = ["interpreter", "programming-language", "islamic", "arabic"]
categories = ["compilers"]

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.21", features = ["derive"] }
ordered-float = "4.2.2"
rand = "0.8.5"

[[bin]]
name = "qalam"
path = "src/main.rs"
