[package]
name = "qalam"
version = "0.3.0"
edition = "2021"
authors = ["Ammar Ahmed <ammar.ahmed2203@gmail.com>"]
license = "MIT"
repository = "https://github.com/ammar-ahmed22/qalam"
readme = "README.md"
description = "Interpreter for the Qalam programming language. Qalam is a dead-simple, Urdu inspired, interpreted programming langauge."
keywords = ["interpreter", "programming-language", "urdu"]
categories = ["compilers"]

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.21", features = ["derive"] }
colored = "2.1.0"
ordered-float = "4.2.2"
rand = "0.8.5"
rustyline = "11.0.0"

[[bin]]
name = "qalam"
path = "src/main.rs"
